k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lanka-basket
  labels:
    name: lanka-basket
